# FluidSolver

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile.out
Makefiles/: compiler_flags.mk  libs.mk
bench/: .gitignore  CMakeLists.txt  LinearSolver.cpp  bench.mk  dmomdt.cpp  update-velo-fuse.cpp
cmake/: compiler_flags.cmake
examples/: CMakeLists.txt  CapillaryWave.cpp  ChannelWithDrop.cpp  Curvature.cpp  DFGBenchmarkSetup.hpp  DiffuseIB-DFG.cpp  DiffuseIB.cpp  DiffuseInterfaceIB.cpp  DivFreeExtrapolation.cpp  ExpandingBubble.cpp  GrowingIB.cpp  IB-Luchini.cpp  IB.cpp  II.cpp  IncompSolver.cpp  LidDrivenFlow.cpp  LuchiniIB-DFG.cpp  MovingLeastSquaresIB.cpp  PhaseChange.cpp  RisingBubble.cpp  SharpIB-DFG.cpp  SharpIB.cpp  SharpInterfaceIB.cpp  SlowChannel.cpp  TwoPhaseSolver.cpp  VOF.cpp  VerifyDFGBenchmarkSetup.cpp  WallBubble.cpp  Wave.cpp
python/: .gitignore  Utility.py  patch_xdmf.py  plot_growing_ib.py  verify_couette.py  verify_couette_xdmf.py  verify_laminar_channel.py  verify_laminar_channel_vtk.py  verify_laminar_channel_xdmf.py  vis_curv_error.py  vis_fs.py
scaling/: CMakeLists.txt  Channel.cpp  DiffuseIBChannel.cpp  Integration.cpp  LidDrivenFlow.cpp  LuchiniIBChannel.cpp  PeriodicChannel.cpp  SharpIBChannel.cpp
src/: BoundaryConditions.hpp  Config.hpp  Container.hpp  Curvature.cpp  Curvature.hpp  FS.hpp  FluidSolver.cpp  ForEach.hpp  Geometry.hpp  HYPREUtility.hpp  IB.hpp  IO.hpp  IR.hpp  IncompSolver.cpp  IotaIter.hpp  LinearSolver_Accelerate.hpp  LinearSolver_StructHypre.hpp  LinearSystem.hpp  Macros.hpp  Monitor.hpp  Operators.hpp  PressureCorrection.hpp  PressureCorrection_Accelerate.hpp  PressureCorrection_FFT.hpp  Quadrature.hpp  StdparOpenMP.hpp  TwoPhaseSolver.cpp  Utility.hpp  VOF.cpp  VOF.hpp  VTKWriter.hpp  XDMFWriter.hpp
test/: .gitignore  CMakeLists.txt  Common.hpp  ConstantVelocityVOF.cpp  Container.cpp  Couette.cpp  CustomDirichletChannel.cpp  EvalFlowFieldAt.cpp  LaminarChannel.cpp  LinearSolver.cpp  LinearVelocityVOF.cpp  MovingDrop.cpp  OffloadGPU.cpp  Operators.cpp  PeriodicChannel.cpp  Quadrature.cpp  ShapeFunction.cpp  StationaryDrop.cpp  TaylorGreenVortex.cpp  TaylorGreenVortexVOF.cpp  Utility.cpp  test.mk
tools/: AmiraMesh2HDF5.cpp  CMakeLists.txt  patch_xdmf.py
